<resources>
    <string name="app_name">ProjectZero</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="account">Já tem uma conta?</string>
    <string name="password">Senha</string>
    <string name="forgot_password">ESQUECEU A SENHA?</string>
    <string name="new_user">Novo Usuário? Register Agora</string>
    <string name="register_info">Faça seu registro!</string>
    <string name="register">Registre-se</string>
    <string name="name">Nome</string>
    <string name="login_erro">Os campos não podem estar vazios</string>
    <string name="invalid_info">Usuário invalido</string>
    <string name="registration_success">Registro feito com Sucesso</string>
    <string name="registration_error">Registro não foi efetuado</string>
    <string name="appversion">AppVersion</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>